# devdash

./: .dist-log.txt  .gitignore  .ipc-main.txt  .ipc-preload.txt  .release-notes-0.10.0.md  .release-notes-0.10.1.md  .release-notes-0.10.2.md  .release-notes-0.11.0.md  .release-notes-0.12.0.md  .release-notes-0.13.0.md  .release-notes-0.14.0.md  .release-notes-0.15.0.md  .release-notes-0.16.0.md  .release-notes-0.17.0.md  .release-notes-0.2.0.md  .release-notes-0.3.0.md  .release-notes-0.4.0.md  .release-notes-0.5.0.md  .release-notes-0.5.1.md  .release-notes-0.6.0.md  .release-notes-0.7.0.md  .release-notes-0.8.0.md  .release-notes-0.8.1.md  .release-notes-0.8.2.md  .release-notes-0.9.0.md  .release-notes-0.9.1.md  .release-notes-0.9.2.md  CHANGELOG.md  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
electron/: addons.ts  aigen.ts  aiprovider.ts  automations.ts  backup.ts  bundlesize.ts  cache.ts  capacitor.ts  changelog.ts  childprocs.ts  cloudsync.ts  collaborators.ts  config.ts  configbackup.ts  createdeploy.ts  dbhealth.ts  depcheck.ts  deploys.ts  envman.ts  frameworks.ts  git.ts  gitsafe.ts  heatmap.ts  inspect.ts  main.ts  marketplace.json  ollama.ts  ports.ts  preload.ts  release.ts  rendermetrics.ts  scaffold.ts  scaffoldhistory.ts  (+12 more)
templates/rust-actix-react/backend/: .env.example  Cargo.toml
templates/rust-actix-react/backend/src/: main.rs  schema.rs
templates/rust-actix-react/backend/src/handlers/: auth.rs
templates/rust-actix-react/backend/src/middleware/: mod.rs
templates/rust-actix-react/backend/src/models/: mod.rs
(+183 files in other folders)
